spacing pricing fixed

--- a/css/style.css
+++ b/css/style.css
@@ -1012,11 +1012,21 @@ footer{
   .paymentplan-block {
     flex-direction: column;
     align-items: flex-start;
-    padding: 13px 20px;
-    gap:20px;
+    padding: 15px 20px;
+    gap:0px;
   }
   .paymentplan-block h2 {
     width: 100%;
+    margin-bottom: 0;
+    font-size: 36px;
+  }
+  .paymentplan-text span{
+    font-size: 20px;
+    margin-bottom: 0;
+  }
+  .paymentplan-text p{
+    font-size: 14px;
+    margin-bottom: 11px;
   }
   .paymentplan-block h2::after {
     display: none;
